--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,4 +29,5 @@ dependencies {
     compile 'com.jakewharton:butterknife:5.1.2'
     compile 'com.jakewharton.timber:timber:2.4.1'
     compile 'com.google.code.gson:gson:2.3'
+    compile 'com.squareup.picasso:picasso:2.4.0@jar'
 }
